# mipt-rust-homeworks

./: Cargo.toml  README.md
.github/workflows/: test.yml
borrowing/context/src/: lib.rs
borrowing/context/tests/: tests.rs
borrowing/pstack/src/: lib.rs
borrowing/pstack/tests/: tests.rs
intro/conway/: Cargo.toml
intro/conway/src/: lib.rs
intro/conway/tests/: tests.rs
intro/min-queue/: Cargo.toml
intro/min-queue/src/: lib.rs
problems/intro/combinations/src/: lib.rs
problems/intro/min-queue/: .config.yml
problems/tutorial/add/src/: lib.rs
tools/rover/: README.md
tools/rover/src/repository/: repo.rs  toolchain.rs
